--- a/moveit/package.json
+++ b/moveit/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@types/react-router": "^5.1.12",
     "js-cookie": "^2.2.1",
     "next": "10.0.7",
     "react": "17.0.1",
